--- a/modules/distribution/release-notes.html
+++ b/modules/distribution/release-notes.html
@@ -117,6 +117,8 @@
     <li> String and Math extensions for Siddhi</li>
     <li> Hot deployment support for all CEP artifacts</li>
     <li> File Based Stream Definition Store</li>
+    <li> Activity Mediator for ESB</li>
+    <li> Event simulation using given CSV files</li>
 </ul>
 
 <h2>Reporting Problems</h2>
