fixing versions and license file

--- a/modules/distribution/release-notes.html
+++ b/modules/distribution/release-notes.html
@@ -27,7 +27,7 @@
 <h1>WSO2 Complex Event Processor(WSO2 CEP) 4.0.0
     Release Notes</h1>
 
-<h3>15 June 2015</h3>
+<h3>11 Sep 2015</h3>
 
 <p>WSO2 CEP is a lightweight and easy-to-use Open Source Complex Event Processing
     Server (CEP) is available under the Apache Software License v2.0.WSO2 Complex
@@ -95,8 +95,10 @@
     </li>
     <li>Tightly Integrates with WSO2 Data Analytics Server - for recording and post processing of events.
     </li>
-    <li>Realtime Dashboard using the inbuilt Analytics Dashboard</li>
+    <li>Realtime Dashboard using the inbuilt Realtime Analytics Gadgets</li>
+    <li>Geo Dashboard with geo fencing capabilities</li>
     <li>Siddhi Extensions</li>
+    <li>Siddhi query autocompletion</li>
     <li>Event Adaptor Extension</li>
     <li>Configuration based class loading mechanism for Siddhi</li>
     <li>Arbitrary key values pair support for WSO2 Events</li>
