--- a/modules/distribution/release-notes.html
+++ b/modules/distribution/release-notes.html
@@ -60,8 +60,8 @@
 
 <p>
     The WIKI based documentation is available at
-    <a href="http://docs.wso2.org/wiki/display/CEP400/Complex+Event+Processor+Documentation">
-        http://docs.wso2.org/wiki/display/CEP400/Complex+Event+Processor+Documentation
+    <a href="https://docs.wso2.com/display/CEP400/WSO2+Complex+Event+Processor+Documentation">
+        https://docs.wso2.com/display/CEP400/WSO2+Complex+Event+Processor+Documentation
     </a>
 </p>
 
