Adding release notes.

--- a/modules/distribution/release-notes.html
+++ b/modules/distribution/release-notes.html
@@ -1,17 +1,19 @@
 <!--
   ~ Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
+  ~ WSO2 Inc. licenses this file to you under the Apache License,
+  ~ Version 2.0 (the "License"); you may not use this file except
+  ~ in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied. See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
   -->
 
 <html>
@@ -26,7 +28,7 @@
 <body>
 <h1>WSO2 Complex Event Processor(WSO2 CEP) 4.2.0 Release Notes</h1>
 
-<h3>29 July 2016</h3>
+<h3>06 September 2016</h3>
 
 <p>WSO2 CEP is a lightweight and easy-to-use Open Source Complex Event Processing
     Server (CEP) is available under the Apache Software License v2.0.WSO2 Complex
@@ -120,12 +122,18 @@
     </li>
     <li>[<a href='https://wso2.org/jira/browse/CEP-1517'>CEP-1517</a>] -         Split Function for String Siddhi Extension
     </li>
+    <li>[<a href='https://wso2.org/jira/browse/CEP-1574'>CEP-1574</a>] -         JNDI Connector to Sonic MQ.
+    </li>
 </ul>
 
 <h2>        Improvement
 </h2>
 <ul>
+    <li>[<a href='https://wso2.org/jira/browse/CEP-1442'>CEP-1442</a>] -         Create a role for analytics dashboard with necessary permissions (CEP &amp; DAS)
+    </li>
     <li>[<a href='https://wso2.org/jira/browse/CEP-1476'>CEP-1476</a>] -         Siddhi Map Extension : map:CreateFromXML() only support XML with root element
+    </li>
+    <li>[<a href='https://wso2.org/jira/browse/CEP-1488'>CEP-1488</a>] -         Allow &#39;-&#39; in @Import/@Export section in execution plan
     </li>
     <li>[<a href='https://wso2.org/jira/browse/CEP-1497'>CEP-1497</a>] -         Custom XML input mapping should be able to populate stream attributes from XML attributes
     </li>
@@ -142,6 +150,8 @@
     <li>[<a href='https://wso2.org/jira/browse/CEP-1528'>CEP-1528</a>] -         Provide support for string values to be used in line charts x axis in real time gadets
     </li>
     <li>[<a href='https://wso2.org/jira/browse/CEP-1532'>CEP-1532</a>] -         Add basicAuth enable property for http event receiver
+    </li>
+    <li>[<a href='https://wso2.org/jira/browse/CEP-1540'>CEP-1540</a>] -         [Template Manager UI] JSP pages which are not invoked through Ajax are named as *_ajaxprocessor.jsp
     </li>
 </ul>
 
